# Zappy

./: .gitignore  Makefile  README.md  project.code-workspace
.github/templates/: pull_request_template.md
.github/workflows/: mirroring.yml  testBuild.yml  testCommitNorm.yml
zappy_ai/: .coveragerc  .gitignore  Makefile  build.sh  main.py  requirements.txt  test.sh
zappy_ai/doc/: AI.md
zappy_ai/tests/: AgentTest.py  ServerTest.py  test.py  test_Agent.py  test_Color.py  test_Parameter.py  test_Repetoile.py
zappy_ai_dir/: main.py
zappy_ai_dir/doc/: AI.md
zappy_ai_dir/tests/: test_Parameter.py  test_Repetoile.py
zappy_gui/: CMakeLists.txt
zappy_gui/assets/: imgui.ini
zappy_gui/src/: main.cpp
zappy_gui/src/App/: App.cpp  App.hpp
zappy_gui/src/Chat/: Chat.cpp  Chat.hpp
zappy_gui/src/Entities/: Alien.cpp  Alien.hpp  Egg.cpp  Egg.hpp  IEntity.hpp  Rock.cpp  Rock.hpp
zappy_gui/src/GetOpt/: GetOpt.cpp  GetOpt.hpp
zappy_gui/src/Map/: Map.cpp  Map.hpp  Tile.cpp  Tile.hpp
zappy_gui/src/NetworkManager/: NetworkManager.cpp  NetworkManager.hpp
zappy_gui/src/Socket/: Socket.cpp  Socket.hpp
zappy_gui/src/Utils/: RockManager.cpp  RockManager.hpp  RocksType.hpp  TeamManager.cpp  TeamManager.hpp  Utils.cpp  Utils.hpp
zappy_gui/src/WindowManager/: WindowManager.cpp  WindowManager.hpp  WindowManagerException.hpp
zappy_gui_dir/src/: main.cpp
zappy_server/: .gitignore  Makefile  launch_server.sh
zappy_server/include/: callback.h  clients.h  commands.h  egg.h  free.h  map.h  my_id.h  my_time.h  my_uuid.h  parsing.h  socket.h  team.h  utils.h  zappy_server.h
zappy_server/src/: main.c
zappy_server_dir/: .gitignore
zappy_server_dir/include/: clients.h  free.h  (+6 more)
(+218 files in other folders)
